# TGL-AttendenceSystem

./: .env.example  .gitignore  Caddyfile  Caddyfile.prod  DEPLOYMENT.md  HardwareRequirements.md  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  setup.sh
.github/workflows/: ci.yml  codeql.yml
backend/: .env.example  .env.test  .eslintrc.js  Dockerfile  Dockerfile.pm2  ecosystem.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  test_name.js
backend-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend-rust/src/: error.rs  lib.rs  main.rs
backend-rust/src/config/: mod.rs
backend-rust/src/controllers/: admin.rs  admin_security.rs  attendance.rs  batch.rs  location.rs  mod.rs  public_webauthn.rs  session.rs  short_link.rs  webauthn.rs
backend-rust/src/controllers/admin/: auth.rs  dashboard.rs  flags.rs  sessions.rs
backend-rust/src/middleware/: auth.rs  device_check.rs  device_fingerprint.rs  device_trust.rs  mod.rs  rate_limit_middleware.rs  rate_limiter.rs  session_cache.rs
backend-rust/src/models/: admin.rs  attendance.rs  device.rs  flag.rs  mod.rs  short_link.rs  system_config.rs  webauthn_credential.rs
backend-rust/src/routes/: admin.rs  admin_security.rs  client_log.rs  config.rs  device.rs  mod.rs  short_link.rs  student.rs
backend-rust/src/services/: face_detection.rs  system_health.rs
backend-rust/tests/common/: assertions.rs  fixtures.rs  mocks.rs  mod.rs  test_app.rs  test_db.rs
backend-rust/tests/e2e/: integration_tests.rs
backend-rust/tests/integration/: lib.rs  models_tests.rs  security_integration_tests.rs
backend-rust/tests/middleware/: auth_tests.rs  lib.rs  mobile_tests.rs  rate_limiter_tests.rs
backend-rust/tests/security/: lib.rs  route_auth_tests.rs  security_enhancements_tests.rs  security_tests.rs
backend-rust/tests/unit/: lib.rs
backend-rust/tests/unit/controllers/: admin_lockout_tests.rs  admin_register_tests.rs  admin_security_tests.rs  attendance_tests.rs  client_log_tests.rs  config_tests.rs  dashboard_tests.rs  export_tests.rs  mod.rs  totp_tests.rs  verification_tests.rs  webauthn_tests.rs
backend-rust/tests/unit/models/: device_fingerprint_tests.rs  mod.rs  session_tests.rs
backend-rust/tests/unit/services/: device_integrity_tests.rs  emulator_tests.rs  face_detection_tests.rs  gps_history_tests.rs  gps_validation_tests.rs  mod.rs  redis_cache_tests.rs  spoofing_tests.rs  storage_tests.rs
backend-rust/tests/unit/utils/: captcha_tests.rs  geo_extended_tests.rs  geo_tests.rs  mod.rs
backend/src/: server.js
backend/tests/: adminLockout.test.js  (+26 more)
nginx/: nginx.conf
scripts/: init-mongo-replicaset.js
(+185 files in other folders)
